Fix to user new struture to approve or deny attachment
