# helpdesk-bot/src/main/java/org/symphonyoss/symphony/bots/helpdesk/bot/api/V1HelpDeskController.java
@@ -27,7 +27,9 @@ import org.symphonyoss.symphony.bots.utility.validation.SymphonyValidationUtil;
 import org.symphonyoss.symphony.clients.model.SymMessage;
 import org.symphonyoss.symphony.clients.model.SymUser;
 
+import java.util.ArrayList;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import javax.ws.rs.BadRequestException;
@@ -45,6 +47,7 @@ public class V1HelpDeskController extends V1ApiController {
       "This action can not be perfomed because this attachment was approved/denied before.";
   private static final String OWN_ATTACHMENT_EXCPETION =
       "You can not perform this action in your own attachment.";
+  private static final String ATTACHMENT_TYPE = "ATTACHMENT";
 
   @Autowired
   private SymphonyValidationUtil symphonyValidationUtil;
@@ -80,43 +83,47 @@ public class V1HelpDeskController extends V1ApiController {
 
   /**
    * Accept a maker checker message.
-   * @param detail the maker checker message detail
+   * @param makerCheckerId the identify of maker checker
+   * @param userId the userId of approve maker checker
    * @return a maker checker message response
    */
   @Override
-  public MakerCheckerResponse approveMakerCheckerMessage(MakerCheckerMessageDetail detail) {
-    validateRequiredParameter("streamId", detail.getStreamId(), "body");
-    symphonyValidationUtil.validateStream(Base64.encodeBase64URLSafeString(Base64.decodeBase64(detail.getStreamId())));
-    validateRequiredParameter("groupId", detail.getGroupId(), "body");
-    validateRequiredParameter("attachmentId", detail.getAttachmentId(), "body");
-    validateRequiredParameter("timestamp", detail.getTimeStamp(), "body");
-    validateRequiredParameter("messageId", detail.getMessageId(), "body");
-    validateRequiredParameter("userId", detail.getUserId(), "body");
+  public MakerCheckerResponse approveMakerCheckerMessage(String makerCheckerId, Long userId) {
+//    validateRequiredParameter("streamId", detail.getStreamId(), "body");
+//    symphonyValidationUtil.validateStream(Base64.encodeBase64URLSafeString(Base64.decodeBase64(detail.getStreamId())));
+//    validateRequiredParameter("groupId", detail.getGroupId(), "body");
+//    validateRequiredParameter("attachmentId", detail.getAttachmentId(), "body");
+//    validateRequiredParameter("timestamp", detail.getTimeStamp(), "body");
+//    validateRequiredParameter("messageId", detail.getMessageId(), "body");
+//    validateRequiredParameter("userId", detail.getUserId(), "body");
 
-    Makerchecker makerchecker = makercheckerClient.getMakerchecker(detail.getMakerCheckerId());
+    validateRequiredParameter("makerCheckerId", makerCheckerId, "body");
+    validateRequiredParameter("userId", userId, "body");
+
+    Makerchecker makerchecker = makercheckerClient.getMakerchecker(makerCheckerId);
     if (makerchecker == null) {
       throw new BadRequestException(MAKER_CHECKER_NOT_FOUND);
     }
 
-    if (makerchecker.getMakerId().equals(detail.getUserId())) {
+    if (makerchecker.getMakerId().equals(userId)) {
       throw new BadRequestException(OWN_ATTACHMENT_EXCPETION);
     }
 
     try {
-      validateMembershipService.updateMembership(detail.getUserId());
+      validateMembershipService.updateMembership(userId);
     } catch (SymException e) {
       throw new BadRequestException("User is not an agent");
     }
 
     if (MakercheckerClient.AttachmentStateType.OPENED.getState().equals(makerchecker.getState())) {
-      SymUser agentUser = symphonyValidationUtil.validateUserId(detail.getUserId());
-      sendApprovedMakerChekerMessage(detail);
+      SymUser agentUser = symphonyValidationUtil.validateUserId(userId);
+      sendApprovedMakerChekerMessage(makerchecker, userId);
       UserInfo checker = getChecker(agentUser);
       makerchecker.setChecker(checker);
       makerchecker.setState(MakercheckerClient.AttachmentStateType.APPROVED.getState());
       makercheckerClient.updateMakerchecker(makerchecker);
 
-      return buildMakerCheckerResponse(agentUser, detail, MakercheckerClient.AttachmentStateType.APPROVED);
+      return buildMakerCheckerResponse(agentUser, makerchecker);
     } else {
       throw new BadRequestException(OPEN_MAKERCHECKER_NOT_FOUND);
     }
@@ -125,72 +132,53 @@ public class V1HelpDeskController extends V1ApiController {
 
   /**
    * Deny a maker checker message.
-   * @param detail the maker checker message detail
+   * @param makerCheckerId the identify of maker checker
+   * @param userId the userId of deny maker checker
    * @return a maker checker message response
    */
   @Override
-  public MakerCheckerResponse denyMakerCheckerMessage(MakerCheckerMessageDetail detail) {
-    symphonyValidationUtil.validateStream(detail.getStreamId());
+  public MakerCheckerResponse denyMakerCheckerMessage(String makerCheckerId, Long userId) {
+    validateRequiredParameter("makerCheckerId", makerCheckerId, "body");
+    validateRequiredParameter("userId", userId, "body");
+    SymUser agentUser = symphonyValidationUtil.validateUserId(userId);
 
-    Makerchecker makerchecker = makercheckerClient.getMakerchecker(detail.getMakerCheckerId());
+    Makerchecker makerchecker = makercheckerClient.getMakerchecker(makerCheckerId);
     if (makerchecker == null) {
       throw new BadRequestException(MAKER_CHECKER_NOT_FOUND);
     }
 
-    if (makerchecker.getMakerId().equals(detail.getUserId())) {
+    if (makerchecker.getMakerId().equals(userId)) {
       throw new BadRequestException(OWN_ATTACHMENT_EXCPETION);
     }
 
     try {
-      validateMembershipService.updateMembership(detail.getUserId());
+      validateMembershipService.updateMembership(userId);
     } catch (SymException e) {
       throw new BadRequestException("User is not an agent");
     }
 
     if (MakercheckerClient.AttachmentStateType.OPENED.getState().equals(makerchecker.getState())) {
-      SymUser agentUser = symphonyValidationUtil.validateUserId(detail.getUserId());
       UserInfo checker = getChecker(agentUser);
 
       makerchecker.setChecker(checker);
       makerchecker.setState(MakercheckerClient.AttachmentStateType.DENIED.getState());
       makercheckerClient.updateMakerchecker(makerchecker);
 
-      return buildMakerCheckerResponse(agentUser, detail, MakercheckerClient.AttachmentStateType.DENIED);
+      return buildMakerCheckerResponse(agentUser, makerchecker);
     } else {
       throw new BadRequestException(OPEN_MAKERCHECKER_NOT_FOUND);
     }
   }
 
   private MakerCheckerResponse buildMakerCheckerResponse(SymUser agentUser,
-      MakerCheckerMessageDetail detail, MakercheckerClient.AttachmentStateType state) {
-    MakerCheckerResponse makerCheckerResponse = new MakerCheckerResponse();
-    makerCheckerResponse.setMakerCheckerMessageDetail(detail);
-
-    User user = getUser(detail, agentUser);
-
-    makerCheckerResponse.setUser(user);
-
-    if (MakercheckerClient.AttachmentStateType.APPROVED.equals(state)) {
-      makerCheckerResponse.setMessage(MAKER_CHECKER_SUCCESS_RESPONSE);
-      makerCheckerResponse.setState(MakercheckerClient.AttachmentStateType.APPROVED.getState());
-    } else {
-      makerCheckerResponse.setMessage(MAKER_CHECKER_DENY_RESPONSE);
-      makerCheckerResponse.setState(MakercheckerClient.AttachmentStateType.DENIED.getState());
-    }
-
-    return makerCheckerResponse;
-  }
-
-  private MakerCheckerResponse buildMakerCheckerResponse(SymUser agentUser,
       Makerchecker makerchecker) {
     MakerCheckerResponse makerCheckerResponse = new MakerCheckerResponse();
-//    makerCheckerResponse.setMakerCheckerMessageDetail(detail);
 
     User user = getUser(makerchecker, agentUser);
 
     makerCheckerResponse.setUser(user);
 
-    if (MakercheckerClient.AttachmentStateType.APPROVED.equals(makerchecker.getState())) {
+    if (MakercheckerClient.AttachmentStateType.APPROVED.getState().equals(makerchecker.getState())) {
       makerCheckerResponse.setMessage(MAKER_CHECKER_SUCCESS_RESPONSE);
       makerCheckerResponse.setState(MakercheckerClient.AttachmentStateType.APPROVED.getState());
     } else {
@@ -201,17 +189,17 @@ public class V1HelpDeskController extends V1ApiController {
     return makerCheckerResponse;
   }
 
-  private void sendApprovedMakerChekerMessage(MakerCheckerMessageDetail detail) {
+  private void sendApprovedMakerChekerMessage(Makerchecker makerchecker, Long checkerId) {
     AttachmentMakerCheckerMessage checkerMessage = new AttachmentMakerCheckerMessage();
-    checkerMessage.setAttachmentId(detail.getAttachmentId());
-    checkerMessage.setGroupId(detail.getGroupId());
-    checkerMessage.setMessageId(detail.getMessageId());
-    checkerMessage.setStreamId(Base64.encodeBase64URLSafeString(Base64.decodeBase64(detail.getStreamId())));
-    checkerMessage.setProxyToStreamIds(detail.getProxyToStreamIds());
-    checkerMessage.setTimeStamp(detail.getTimeStamp());
-    checkerMessage.setType(detail.getType());
+    checkerMessage.setAttachmentId(makerchecker.getAttachmentId());
+    checkerMessage.setGroupId(makerchecker.getGroupId());
+    checkerMessage.setMessageId(makerchecker.getMessageId());
+    checkerMessage.setStreamId(Base64.encodeBase64URLSafeString(Base64.decodeBase64(makerchecker.getStreamId())));
+    checkerMessage.setProxyToStreamIds(makerchecker.getProxyToStreamIds());
+    checkerMessage.setTimeStamp(makerchecker.getTimeStamp());
+    checkerMessage.setType(ATTACHMENT_TYPE);
 
-    AiSessionKey aiSessionKey = helpDeskAi.getSessionKey(detail.getUserId(), detail.getStreamId());
+    AiSessionKey aiSessionKey = helpDeskAi.getSessionKey(checkerId, makerchecker.getStreamId());
 
     Set<SymMessage> symMessages = agentMakerCheckerService.getApprovedMakercheckerMessage(checkerMessage);
 
@@ -233,13 +221,6 @@ public class V1HelpDeskController extends V1ApiController {
     User user = new User();
     user.setDisplayName(agentUser.getDisplayName());
     user.setUserId(makerchecker.getMakerId());
-    return user;
-  }
-
-  private User getUser(MakerCheckerMessageDetail detail, SymUser agentUser) {
-    User user = new User();
-    user.setDisplayName(agentUser.getDisplayName());
-    user.setUserId(detail.getUserId());
     return user;
   }
 
