# helpdesk-bot/src/main/swagger/helpdesk-bot-api.yaml
@@ -81,18 +81,20 @@ paths:
             $ref: '#/definitions/Error'
       tags:
         - Ticket
-  /v1/makerchecker/approve:
+  /v1/makerchecker/{makerCheckerId}/approve:
     post:
       summary: Notify the help desk bot that a message has been accepted for sending by another agent.
       operationId: approveMakerCheckerMessage
       parameters:
-        - name: message
-          in: body
+        - name: makerCheckerId
+          in: path
           required: true
-          schema:
-            $ref: '#/definitions/MakerCheckerMessageDetail'
-      consumes:
-        - application/json
+          type: string
+        - name: userId
+          in: query
+          required: true
+          type: integer
+          format: int64
       produces:
         - application/json
       responses:
@@ -115,18 +117,20 @@ paths:
             $ref: '#/definitions/Error'
       tags:
         - MakerChecker
-  /v1/makerchecker/deny:
+  /v1/makerchecker/{makerCheckerId}/deny:
     post:
       summary: Notify the help desk bot that a message has been denied for sending by another agent.
       operationId: denyMakerCheckerMessage
       parameters:
-        - name: message
-          in: body
+        - name: makerCheckerId
+          in: query
           required: true
-          schema:
-            $ref: '#/definitions/MakerCheckerMessageDetail'
-      consumes:
-        - application/json
+          type: string
+        - name: userId
+          in: query
+          required: true
+          type: integer
+          format: int64
       produces:
         - application/json
       responses:
